Use Java11 http client to handle 404